feat:client upvotes/downvotes for streamer feature add

--- a/client/src/components/Content/StreamersContainer/StreamerLink/StreamerLink.scss
+++ b/client/src/components/Content/StreamersContainer/StreamerLink/StreamerLink.scss
@@ -9,7 +9,19 @@
         border-radius: 4px;
     }
     .details {
-        
+        .name {}
+        .platform {}
+        .votes {
+            // position: relative;
+            // .upvotes {
+            //     position: absolute;
+            //     z-index: 10;
+            // }
+            // .downvotes {
+            //     position: absolute;
+            //     z-index: 10;
+            // }
+        }
     }
     
 }
