--- a/client/src/components/Content/StreamerDetails/StreamerDetails.scss
+++ b/client/src/components/Content/StreamerDetails/StreamerDetails.scss
@@ -1,3 +1,11 @@
+.spinner-container {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 100vh;
+    align-items: center;
+}
+
 .details-container {
     min-height: 100vh;
     width: 100%;
