--- a/client/src/components/Content/StreamersContainer/StreamersContainer.scss
+++ b/client/src/components/Content/StreamersContainer/StreamersContainer.scss
@@ -1,3 +1,11 @@
+.spinner-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+}
+
 .streamers-container {
     border: 1px solid black;
     width: 45%;
