--- a/client/src/components/Content/Content.scss
+++ b/client/src/components/Content/Content.scss
@@ -4,10 +4,12 @@
     justify-content: center;
     align-items: center;
     margin-top: 20px;
-    border: 1px solid black;
     border-radius: 4px;
     width: 80%;
     min-height: 80vh;
     max-height: 80vh;
+    -webkit-box-shadow: 0px 0px 12px 0px rgba(66, 68, 90, 1);
+    -moz-box-shadow: 0px 0px 12px 0px rgba(66, 68, 90, 1);
+    box-shadow: 0px 0px 12px 0px rgba(66, 68, 90, 1);
 
 }
