--- a/client/src/components/Content/StreamerDetails/StreamerDetails.scss
+++ b/client/src/components/Content/StreamerDetails/StreamerDetails.scss
@@ -18,9 +18,10 @@
         position: absolute;
         left: 15px;
         top: 15px;
-
+        font-weight: bold;
     }
     .details-box {
+        overflow: hidden;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -28,7 +29,9 @@
         height: 80vh;
         width: 60%;
         padding: 15px 15px;
-        border: 1px solid black;
+        -webkit-box-shadow: 0px 0px 12px 0px rgba(66, 68, 90, 1);
+        -moz-box-shadow: 0px 0px 12px 0px rgba(66, 68, 90, 1);
+        box-shadow: 0px 0px 12px 0px rgba(66, 68, 90, 1);
         .image-box {
             height: 50%;
             overflow: hidden;
@@ -45,6 +48,16 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            .name-desc {
+                font-size: 50px;
+                font-weight: bold;
+            }
+            .platform-desc {
+                color:rgb(14, 53, 112);
+            }
+            .description-desc {
+                width: 100%;
+            }
         }
     }
 }
