--- a/client/src/components/Content/StreamersContainer/StreamersContainer.scss
+++ b/client/src/components/Content/StreamersContainer/StreamersContainer.scss
@@ -2,13 +2,31 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    height: 100%;
+    min-width: 50%;
 }
 
 .streamers-container {
-    border: 1px solid black;
-    width: 45%;
+    
+    min-width: 50%;
     max-height: 80vh;
     overflow-y: scroll;
+    padding: 15px 15px;
+    scrollbar-width: thin;
+    scrollbar-color: black white;
+}
+
+::-webkit-scrollbar {
+    height: 8%;
+    width: 8px;
+    background: white;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #000000;
+    -webkit-border-radius: 1ex;
+    -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75);
+}
+
+::-webkit-scrollbar-corner {
+    background: #000;
 }
