--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items:center;
+  position: relative;
   background-color: rgb(211, 211, 211);
   h1 {
     font-size: 30px;
